# covid-snowflake-dashboard

./: .gitignore  .python-version  AGENTS.md  README.md  pyproject.toml  run.sh
.streamlit/: config.toml
scripts/: env.sh
src/: dashboard.py  main.py
src/db/: load_data.py  query_data.py
